methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono1:1: error: expected start of definition
override def run() {
         ^PictureMono1:20: error: expected class or object definition
for (stepper <- 1 to 4){
^